# bc_script

./: .gitignore  MANIFEST.in  README.md  example.toml  pyproject.toml  requirements.txt  todo.txt
src/bc_script/: __init__.py  __main__.py  log.py
src/bc_script/parser/: __init__.py  info.py  parse.py  pkg.py
src/bc_script/parser/bcsfe/: __init__.py  basic_items.py  cats.py  edit.py  load.py  save.py  special_skills.py
